--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
-</head>
-<body>
-    <h1>ventas de equipo</h1>
     <style>
-        .color {
-            color: blueviolet;
+        .color{
+            color:blue;
         }
     </style>
+</head>
+<body>
+  <h1 class="color">venta de equipos</h1>
+  <table border="1">
+    <th>
+        <td>equipos</td>
+        <td>marca</td>
+    </th>
+    <tr>
+        <td>M01L-23</td>
+        <td>Asus</td>
+    </tr>
+
+  </table>
 </body>
 </html>
-<h1 class="color">ventas de equipo</h1>
